<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoinDetailActivity">

    <ImageView
        android:id="@+id/ivCoinLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCoinLogo"
        tools:text="/" />

    <TextView
        android:id="@+id/tvFromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/tvSlash"
        app:layout_constraintTop_toBottomOf="@+id/ivCoinLogo"
        tools:text="BTC" />

    <TextView
        android:id="@+id/tvToSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tvSlash"
        app:layout_constraintTop_toBottomOf="@+id/ivCoinLogo"
        tools:text="USD" />

    <TextView
        android:id="@+id/Price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSlash" />

    <TextView
        android:id="@+id/tvPriceInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/Price"
        app:layout_constraintTop_toBottomOf="@+id/tvSlash"
        tools:text="@string/RandomNumber"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tvPriceInfo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/MinimumOfDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:text="@string/MinimumOfDay"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Price" />

    <TextView
        android:id="@+id/tvMinimumOfDayPriceInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:textColor="#851"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/MinimumOfDay"
        app:layout_constraintTop_toBottomOf="@+id/tvPriceInfo"
        tools:text="@string/RandomNumber"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/MinimumOfDay"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/MaximumOfDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:text="@string/MaximumOfDay"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MinimumOfDay" />

    <TextView
        android:id="@+id/tvMaximumOfDayPriceInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:textColor="#213"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/MaximumOfDay"
        app:layout_constraintTop_toBottomOf="@+id/tvMinimumOfDayPriceInfo"
        tools:text="@string/RandomNumber"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/MaximumOfDay"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/LastMarket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:text="@string/LastMarket"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MaximumOfDay" />

    <TextView
        android:id="@+id/tvLastMarketInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/LastMarket"
        app:layout_constraintTop_toBottomOf="@+id/MaximumOfDay"
        tools:text="Binance" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/LastMarket"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/LastUpdateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:text="@string/Update"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LastMarket" />

    <TextView
        android:id="@+id/tvLastUpdateTimeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/LastUpdateTime"
        app:layout_constraintTop_toBottomOf="@+id/LastMarket"
        tools:text="21:03:23" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/LastUpdateTime"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>